# ormulogun

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  COPYING.pieces  Makefile  README-Endgame.md  README.md
book/: CMakeLists.txt  Makefile  README.md
book/src/: CMakeLists.txt  gen-book.c  merge-books.c
book/tools/: gen-book  gen-eco  merge-ecos  test-book
docs/: endgame.md
frontend/: Makefile  index.xhtml  ormulogun.css  ormulogun.js
frontend/js/: fen.js  gumble.js  load.js  main.js  move.js  movehist.js  preamble.js  puzzle.js
frontend/puzzles/: Makefile  manifest.js  test.js
include/: ormulogun.h
puzzlegen/: CMakeLists.txt  Makefile  README.md  config.h  config.php  dispatch-puzzles  gen-puzzles.c  gen-puzzles.h  merge-jl  merge-puzzles  preprocess-fen  preprocess-pgn  probe-puzzles  puzzle.c  uci.c  update-manifest
puzzlegen/include/: config.h  ormulogun.h
puzzlegen/puzzles/: Makefile  README.md  out
puzzlegen/src/: CMakeLists.txt  config.h  eval.c  gen-puzzles.c  gen-puzzles.h  gumbleextras.c  puzzle.c  retag-puzzles.c  tags.c  uci.c
puzzlegen/test/: Makefile  tags.jl  tags.jpl  test-tags  todo.jpl
puzzlegen/tools/: chunk-pgn  filter-pgn  jl_to_json  merge-jl  pgnml_to_json  update-manifest
puzzles/: Makefile  README.md  out  tags.jpl  todo.jpl
src/: CMakeLists.txt  chunk-pgn.c
src/bookgen/: CMakeLists.txt  common.c  common.h  gen-book.c  gen-eco.c  merge-books.c
src/c/: config.h  gen-puzzles.c  gen-puzzles.h  load.c  ormulogun.h  puzzle.c  retag-puzzles.c  tags.c  uci.c
src/js/: endgame.js  fen.js  gumble.js  journal.js  leitner.js  load.js  main.js  move.js  movehist.js  prefs.js  puzzle.js  puzzleset.js  state.js  tabs.js  (+1 more)
src/puzzlegen/: CMakeLists.txt  eval.c  gen-puzzles.c  gumbleextras.c  puzzle.c  regen-puzzles.c  retag-puzzles.c  tags.c  unstrip-jl.c
test/: Makefile  tags.jl  todo.jpl
tools/: chunk-pgn  optisvg  ormulogun.php
(+57 files in other folders)
